@@ -48,15 +48,19 @@
       "runtime" : {
          "requires" : {
             "Carp" : "0",
-            "perl" : "5.006001"
+            "Data::Dumper" : "0",
+            "perl" : "5.006001",
+            "strict" : "0",
+            "warnings" : "0"
          }
       },
       "test" : {
          "requires" : {
-            "IO::Handle" : "0",
+            "Exporter" : "0",
             "Import::Into" : "1.002005",
             "Test::More" : "0",
-            "lib::relative" : "1.000"
+            "lib::relative" : "1.000",
+            "parent" : "0"
          }
       }
    },
