@@ -2,6 +2,16 @@ Revision history for Perl distribution vars-i
 
 {{$NEXT}}
 
+    - **Versioning change**: Prepare for switch to semantic
+      versioning.  The next production release will be semver 2.0.0.
+    - In `use vars::i '$foo'=>[1..3]`, make `$foo` hold
+      an arrayref rather than the first element of the
+      provided array.  (#4)
+    - Fill in prerequisites and update documentation
+    - Add test kit
+    - Add a placeholder for options (should any be needed
+      in the future).
+
 1.10 2019-07-09T22:03:31Z
     - Production release
 
@@ -41,3 +51,5 @@ Revision history for Perl distribution vars-i
     - injected http://perlmonks.org/index.pl?node_id=264096
     - wrote tests
     - uploaded to cpan (finally)
+
+# vi: set ts=4 sts=4 sw=4 et ai: #
